# CXXProjects

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
data/: settings.json
include/: GameManager.h  mainwindow.h
src/: GameManager.cpp
